Bug 56367 - X segfaults with sna acceleration enabled
Summary: X segfaults with sna acceleration enabled
Status: RESOLVED FIXED
Alias: None
Product: xorg
Classification: Unclassified
Component: Driver/intel (show other bugs)
Version: unspecified
Hardware: x86 (IA32) Linux (All)
: medium normal
Assignee: Chris Wilson
QA Contact: Xorg Project Team
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-10-24 19:27 UTC by Armands Liepins
Modified: 2012-10-24 22:00 UTC (History)
4 users (show)

See Also:
i915 platform:
i915 features:


Attachments
Xorg log when crash occured (2.73 MB, text/plain)
2012-10-24 19:27 UTC, Armands Liepins
no flags Details

Description Armands Liepins 2012-10-24 19:27:25 UTC
Created attachment 69045 [details]
Xorg log when crash occured

X crashes when closing nomachine nx client window on Fedora 17.

Version information:
kernel-PAE-3.6.3-1.fc17.i686
xorg-x11-server-Xorg-1.12.3-2.fc17.i686
xorg-x11-drv-intel-2.20.12-1.fc17.i686 (built with --enable-debug=full)
mesa-dri-drivers-8.0.4-1.fc17.i686
Comment 1 Chris Wilson 2012-10-24 21:28:13 UTC
With your current build of -intel, can you please do 'addr2line -e /usr/lib/xorg/modules/drivers/intel_drv.so 0x899a9 0x8af66 0xae7b0 0xaee20 0xe26de 0xe3ef0 0x8b4ef'
Comment 2 Chris Wilson 2012-10-24 22:00:01 UTC
Thanks for the debug log, spotted the missing line.

commit efb8ff16491ecfb4d9c0c6a718684310d949d8d3
Author: Chris Wilson <chris@chris-wilson.co.uk>
Date:   Wed Oct 24 22:56:20 2012 +0100

    sna: Add missing ValidatePicture() for flattening alphamaps
    
    Reported-by: Armands Liepins <armandsl@gmail.com>
    Bugzilla: https://bugs.freedesktop.org/show_bug.cgi?id=56367
    Signed-off-by: Chris Wilson <chris@chris-wilson.co.uk>


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.