sna: Add missing ValidatePicture() for flattening alphamaps

Reported-by: Armands Liepins <armandsl@gmail.com>
Bugzilla: https://bugs.freedesktop.org/show_bug.cgi?id=56367
Signed-off-by: Chris Wilson <chris@chris-wilson.co.uk>